corrected overlapping button attempt 2

--- a/webpack/static/account_style.css
+++ b/webpack/static/account_style.css
@@ -1,6 +1,9 @@
 .form{
     margin-top: 50px;
-    margin-left: 220px;
+    margin-left: 226px;
+}
+._container{
+    margin-top: 20px;
 }
 .input-1{
     background: transparent;
@@ -80,7 +83,7 @@
     animation-delay: 1s;
 }
 .circle-6:nth-child(6){
-    float: inline-start;
+    float: left;
     margin-top: 80px;
     margin-left: -20px;
     padding: 20px;
@@ -161,10 +164,9 @@
 }
 @media (max-width: 48em){
     .ask_button{
-        margin-top: -80px;
         margin-right: 130px;
     }
     ._container{
-        margin-top: 40px;
+        margin-top: 100px;
     }
 }
